# worldcup

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  README.md  pyproject.toml
.claude/skills/backlog/: SKILL.md
.claude/skills/palpites-copa/: SKILL.md
.github/workflows/: ci.yml
data/editions/2026/: BOLAO.md  ceiling.csv  fixtures.csv  groups.csv  odds.csv  presentation.toml  regulation.csv  scoring.toml  shootouts.csv  tournament.toml
data/editions/2026/archive/: README.md  apresentacao.html  palpites-2026.html  palpites-2026.md
data/editions/2030/: README.md
docs/: BACKLOG.md  C4.md  DATA.md  GLOSSARIO.md  MODEL_CARD.md  PRD.md  SPEC.md  apresentacao.html
scripts/: build_presentation.py  check_backlog.py  check_markdown_line_length.py  check_output_consistency.py  clean-artifacts.sh  efficiency.py  eng36_pool_sim.py  eng54_ko_policy_sim.py  eng56_draw_pool.py  eng64_goals_ab.py  fetch_odds.py  reformat_markdown_lines.py  update_presentation_data.py
src/worldcup/: __init__.py  backtest.py  blend.py  cli.py  consistency.py  edition.py  efficiency.py  fetch_data.py  format_engine.py  knockout.py  model.py  pipeline.py  render.py  scoring.py  status.py  sync.py  teams.py
tests/: conftest.py  test_backtest.py  test_blend.py  test_check_backlog.py  test_cli.py  test_consistency.py  test_edition.py  test_efficiency.py  test_fetch_data.py  test_fetch_odds.py  test_format_engine.py  test_knockout.py  test_model.py  test_pipeline.py  test_render.py  test_scoring.py  test_status.py  test_sync.py  test_teams.py
(+75 files in other folders)
