[project]
name = "worldcup"
version = "0.1.0"
description = "Gerador de palpites de bolão da Copa do Mundo com modelo estatístico (Dixon-Coles)"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "scipy>=1.11",
    "pydantic>=2.6",
]

[project.scripts]
worldcup = "worldcup.cli:main"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=8.0",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/worldcup"]

[tool.ruff]
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4", "RUF", "PIE", "PT", "PTH", "RET", "TC"]
# Caracteres "ambíguos" são tipografia proposital no texto PT (× para placares, – em Dixon–Coles).
ignore = ["RUF001", "RUF002", "RUF003"]

[tool.mypy]
files = ["src"]
python_version = "3.11"
plugins = ["pydantic.mypy"]
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
# numpy/pandas/scipy têm tipos parciais; não falha por stub ausente de terceiros.
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
